# Lab409_Robotiq

./: README.md
others/robotiq_gazebo/: robotiq_pub.py
others/robotiq_s_model_action_server/: CMakeLists.txt  package.xml
others/robotiq_s_model_action_server/launch/: robotiq_s_model_action_server.launch
others/robotiq_s_model_action_server/src/: robotiq_s_model_action_server.cpp
others/rtt_soem_robotiq/: gripper_behaviour  test_robotiq.ops
others/rtt_soem_robotiq/msg/: FingerMsg.msg  RobotiqMsg.msg
others/rtt_soem_robotiq/src/: soem_robotiq_3Finger.h
robotiq/robotiq_s_model_articulated_gazebo/launch/: robotiq.launch
robotiq/robotiq_s_model_visualization/cfg/: robotiq1_hand.xacro  robotiq_hand_macro.urdf.xacro
robotiq_3f_gripper_visualization/cfg/: robotiq-3f-gripper_articulated_macro.xacro  robotiq-3f-gripper_mesh_macro.xacro  robotiq_hand_macro.urdf.xacro  ur5_robotiq-3f-gripper_finger_articulated_macro.urdf.xacro  ur5_robotiq-3f-gripper_finger_articulated_macro.xacro
robotiq_3f_gripper_visualization/urdf/: robotiq-hand.xacro  robotiq.xacro  robotiq_articulated_macro.xacro  robotiq_hand.gv  test.urdf
robotiq_s_model_action_server/include/robotiq_action_server/: robotiq_s_model_action_server.h
robotiq_s_model_action_server/scripts/: open_gripper.py
robotiq_s_model_action_server/src/: robotiq_s_model_action_server_client_test.cpp  robotiq_s_model_action_server_node.cpp
rtt_soem_robotiq/: CMakeLists.txt  mainpage.dox
rtt_soem_robotiq/src/: soem_robotiq_3Finger.cpp  soem_robotiq_drivers.cpp
ur5/ur5_gazebo/scripts/: send_joints.py
(+7 files in other folders)
