<?xml version="1.0"?>
<package>
  <name>robotiq_s_model_action_server</name>
  <version>0.0.0</version>
  <description>Action server for robotic's s model gripper.
    The action server for the gripper is only for one specific task to use it with moveit:
    in the open mode, the gripper has a state like the wide mode. With close, the gripper
    gets in a state like the closed scissor mode. With this task the gripper behaves similar 
    to a 2 finger gripper.</description>

  <maintainer email="goerner@informatik.uni-hamburg.de">Michael Goerner</maintainer>
  <author email="5jonetzk@informatik.uni-hamburg.de">Yannick Jonetzko</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>robotiq_s_model_control</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>robotiq_s_model_control</run_depend>
  <run_depend>roscpp</run_depend>
</package>
